--- a/The Notebook.ipynb
+++ b/The Notebook.ipynb
@@ -65,7 +65,7 @@
     }
    ],
    "source": [
-    "from modules import compaction as cp\n",
+    "import compaction as cp\n",
     "cp.box1()"
    ]
   },
